[package]
name = "smee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
teloxide = { version = "0.12", features = ["macros"] }
youtube_dl = { git = "https://github.com/codabrink/youtube-dl-rs", branch = "rework" }
anyhow = "1"
glob = "0.3"
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4"
parking_lot = "0.12"

reqwest = { version = "0.11", features = ["stream"] }
warp = "0.3"
tokio-stream = "0.1"
futures = "0.3"
lazy_static = "1.4"
async-stream = "0.3"


[profile.release]
strip = true
lto = true
