[package]
name = "smee"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
teloxide = { version = "0.12", features = ["macros"] }
youtube_dl = { git = "https://github.com/codabrink/youtube-dl-rs", branch = "rework" }
anyhow = "1"
glob = "0.3"
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4"
parking_lot = "0.12"
clap = { version = "4.1", features = ["derive"] }

# proxy related
reqwest = { version = "0.11", features = ["stream"] }
warp = { version = "0.3" }
tokio-stream = "0.1"
futures = "0.3"
lazy_static = "1.4"
async-stream = "0.3"
acme-lib = "*"

# backblaze
rust-s3 = "0.32"
aws-region = "0.25"
mime_guess = "2"

[features]
default = []
tls = ["warp/tls"]

[profile.release]
strip = true
lto = true
